// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "triggers": "mock-triggers",
    "videoId": "mock-video-id",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`YouTube Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
